fixed salary table contrast

--- a/assets/scss/_custom_var.scss
+++ b/assets/scss/_custom_var.scss
@@ -5,5 +5,5 @@ $dark-color-secondary: #EBAF54;
 $dark-color-bg: #1F2040;
 $dark-color-focus: #BBF9D5;
 $dark-color-font: #d0d0d0;
-$dark-color-divider: #B8BDC1;
+$dark-color-divider: #282A2E;
 $dark-color-codebg: #414449;
